# HealthRoute-AI-Agentic-RAG-for-Medical-Desert-Intelligence

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: mlflow_trace_fallback.jsonl  virtue_audit_report.html
artifacts/lancedb_fallback/: facility_capabilities.json
data/: ghana_facilities.csv
notebooks/: mlflow_tracing_demo.ipynb
src/: __init__.py
src/agents/: citations.py  crew.py  graph.py  nodes.py  prompts.py
src/api/: __init__.py  main.py  routes.py
src/architecture/: __init__.py  compliance.py
src/extraction/: __init__.py  confidence.py  entity_extractor.py  parser.py
src/integrations/: __init__.py  databricks_llm.py  genie.py  lancedb_store.py  mlflow_tracing.py
src/models/: __init__.py  analysis.py  extraction.py  facility.py  ngo.py
src/planning/: __init__.py  desert_scorer.py  matcher.py  patient_journey.py  query_engine.py  recommender.py  scenario.py
src/rag/: embeddings.py  ingest.py  rag_query.py  retrieval.py
src/reporting/: __init__.py  audit_report.py
src/ui/: app.py  dashboard.py  map_generator.py  visuals.py
src/validation/: __init__.py  anomaly_detector.py  rules.py  schema_validator.py
tests/: conftest.py  eval_must_have_queries.py  test_agents.py  test_extraction.py  test_integrations.py  test_map.py  test_models.py  test_planning.py  test_query_engine.py  test_scenario.py  test_validation.py
