[project]
name = "virtue-foundation-idp"
version = "1.0.0"
description = "Agentic Intelligent Document Parsing system for Virtue Foundation medical desert planning."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pandas>=2.2",
  "streamlit>=1.36",
  "folium>=0.17",
  "plotly>=5.22",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
